@@ -1,3 +1,14 @@
+2010-06-23  Tony Chang  <tony@chromium.org>
+
+        Reviewed by Darin Fisher.
+
+        layout test for a crash in chromium multipart request handling
+        https://bugs.webkit.org/show_bug.cgi?id=41050
+
+        Also roll DEPS to pick up the crash fix.
+
+        * DEPS:
+
 2010-06-23  Yuzo Fujishima  <yuzo@google.com>
 
         Reviewed by Shinichiro Hamaji.
